--- a/Dev/Warewolf.Studio.Themes.Luna/Elements/TabControl.xaml
+++ b/Dev/Warewolf.Studio.Themes.Luna/Elements/TabControl.xaml
@@ -1,5 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:luna="clr-namespace:Warewolf.Studio.Themes.Luna">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:luna="clr-namespace:Warewolf.Studio.Themes.Luna"
+                    xmlns:controls="clr-namespace:Warewolf.Studio.CustomControls;assembly=Warewolf.Studio.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <luna:SharedResourceDictionary Source="../Common/Color.xaml" />
@@ -10,8 +12,38 @@
     <SolidColorBrush x:Key="TabItemBorderBrush" Color="{StaticResource WarewolfWhite}" />
     <SolidColorBrush x:Key="TabItemSelectedBackgroundBrush" Color="{StaticResource WarewolfButtonGrey}" />
 
+    <Style x:Key="TabControlStyley" TargetType="{x:Type controls:TabControlEx}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabControl}">
+                    <Grid Background="{TemplateBinding Background}" ClipToBounds="True" KeyboardNavigation.TabNavigation="Local" SnapsToDevicePixels="True">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition x:Name="ColumnDefinition0" />
+                            <ColumnDefinition x:Name="ColumnDefinition1" Width="0" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition x:Name="RowDefinition0" Height="Auto" />
+                            <RowDefinition x:Name="RowDefinition1" Height="*" />
+                        </Grid.RowDefinitions>
+                        <DockPanel Margin="2,2,0,0" LastChildFill="False">
+                            <TabPanel x:Name="HeaderPanel" Margin="0,0,0,-1" VerticalAlignment="Bottom" Panel.ZIndex="1" DockPanel.Dock="Right"
+                                  IsItemsHost="True" KeyboardNavigation.TabIndex="1" />
+                        </DockPanel>
+                        <Border x:Name="ContentPanel" Grid.Row="1" Grid.Column="0"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            KeyboardNavigation.DirectionalNavigation="Contained" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
+                            <Grid x:Name="PART_ItemsHolder" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <!--  *********************************  TabControlStyle  *********************************  -->
-    <Style x:Key="TabControlStyle" TargetType="{x:Type TabControl}">
+    <Style x:Key="TabControlStyle" TargetType="{x:Type controls:TabControlEx}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Template">
@@ -127,7 +159,7 @@
     </Style>
 
     <!--  *********************************  Implicit Styles  *********************************  -->
-    <Style BasedOn="{StaticResource TabControlStyle}" TargetType="{x:Type TabControl}" />
+    <Style BasedOn="{StaticResource TabControlStyley}" TargetType="{x:Type controls:TabControlEx}" />
 
 
     <Style x:Key="TabControlLeftStyle" TargetType="{x:Type TabControl}">
