--- a/Dev/Dev2.Studio/Settings/Logging/LoggingView.xaml
+++ b/Dev/Dev2.Studio/Settings/Logging/LoggingView.xaml
@@ -56,11 +56,15 @@
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="5"/>
-                            <RowDefinition/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="1">Folder Path</TextBlock>
                         <ui:IntellisenseTextBox x:Name="AuditsFilePathTextBox"
@@ -69,6 +73,7 @@
                                                 FilterType="All"
                                                 DefaultText="Folder Path"
                                                 WrapInBrackets="False"
+                                                Grid.ColumnSpan="2"
                                                 Text="{Binding AuditFilePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                 ToolTip="{x:Static languages:Tooltips.LoggingViewAuditsFilePathToolTip}"
                                                 Style="{StaticResource ActivityIntellisenseTextBoxStyle}">
@@ -81,6 +86,43 @@
                                 <core:HelpSetter Text="{x:Static languages:HelpText.LoggingViewAuditsFilePathHelpText}" DataContext="{Binding}" />
                             </i:Interaction.Behaviors>
                         </ui:IntellisenseTextBox>
+
+                        <TextBlock Grid.Row="2" Margin="{StaticResource ControlBorderTop}">File Size</TextBlock>
+                        <TextBox x:Name="AuditFileSizeTextBox"
+                                 Grid.Row="2" 
+                                 Grid.Column="1"
+                                 Width="50"
+                                 Margin="{StaticResource ControlBorderTop}"
+                                 ToolTip="{x:Static languages:Tooltips.LoggingViewAuditFileSizeToolTip}"
+                                 Text="{Binding AuditFileSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource StringToIntInRangeConverter}}" >
+                            <i:Interaction.Behaviors>
+                                <core:HelpSetter Text="{x:Static languages:HelpText.LoggingViewAuditFileSizeHelpText}" DataContext="{Binding}" />
+                            </i:Interaction.Behaviors>
+                        </TextBox>
+                        <TextBlock Grid.Row="2" Grid.Column="2" Margin="{StaticResource ControlBorderTop}">MB</TextBlock>
+
+                        <TextBlock Grid.Row="3" Margin="{StaticResource ControlBorderTop}">Files To Keep</TextBlock>
+                        <TextBox x:Name="AuditFilesToKeepTextBox"
+                                 Grid.Row="3"
+                                 Grid.Column="1"
+                                 Width="50"
+                                 Margin="{StaticResource ControlBorderTop}"
+                                 ToolTip="{x:Static languages:Tooltips.LoggingViewAuditFilesToKeepToolTip}"
+                                 Text="{Binding AuditFilesToKeep, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource StringToIntInRangeConverter}}" >
+                            <i:Interaction.Behaviors>
+                                <core:HelpSetter Text="{x:Static languages:HelpText.LoggingViewAuditFilesToKeepHelpText}" DataContext="{Binding}" />
+                            </i:Interaction.Behaviors>
+                        </TextBox>
+
+                        <StackPanel Grid.Row="4" 
+                                    Grid.ColumnSpan="3" 
+                                    Margin="{StaticResource ControlBorderTop}" 
+                                    Orientation="Vertical">
+
+                            <TextBlock Text="{Binding AuditAvailableSpace}"/>
+                            <TextBlock Foreground="{StaticResource ValidationErrorElement}" Text="{Binding AuditNotice}"/>
+
+                        </StackPanel>
                     </Grid>
                 </Grid>
             </StackPanel>
